# mugicha

./: .gitignore  README.md  pyproject.toml  test.txt
DQN/: MugichaEnv.py  agent.py  environment.py  model.py  utils.py
decopon/: controller.py
log/: log
src/: __init__.py  main.py  main_.py  test.py  train.py
